tests/errors/type_check/statement/assign_fn_arity_mismatch.err.expected
error: at 6:13: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is fn(i64, i64), RHS is fn(i64)
   |
 6 |             g = callee;
   |             ^^^^^^^^^^
